# pwshc

./: .gitignore  README.md  pyproject.toml
demo/: hello.cmd  hello.ps1
pwshc/: __main__.py  _cmd.py  _compile.py
pwshc/templates/: out.cmd.jinja
