[tool.poetry]
name = "pwshc"
version = "0.1.3"
description = "compile any powershell .ps1 script to a .cmd file"
authors = ["koswu <koswu@outlook.com>"]
readme = "README.md"
exclude = ["demo/*", "tests/*", "docs/*", "dist/*", "build/*", "pwshc.egg-info/*", ".vscode/*"]
homepage = "https://github.com/Koswu/pwshc"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"

jinja2 = "^3.1.4"
chardet = "^5.2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pwshc = "pwshc:__main__"

